# pysurfline

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  environment.yml  pyproject.toml  pytest.ini  setup.py  update_readme_forecast.py
.github/: dependabot.yml  documentation_precheck.yml
.github/workflows/: ci.yml  deploy.yml  deployment-macos.yml  deployment-ubuntu.yml  deployment-windows.yml  deployment.yml  documentation.yml  documentation_lint.yml  documentation_precheck.yml  linting.yml  pre-check-docks.yml  python-publish.yml  tests.yml  todo.yml  todo_issues.yml  update_readme_forecast.yml  versioning_checks.yml
docs/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  surfline_api.html
docs/_autosummary/: pysurfline.api.APIResource.html  pysurfline.api.SurflineClient.html  pysurfline.api.client.SurflineClient.html  pysurfline.api.client.html  pysurfline.api.get_spot_forecasts.html  pysurfline.api.html  pysurfline.api.models.html  pysurfline.api.models.spots.Details.html  pysurfline.api.models.spots.SunlightTimes.html  pysurfline.api.models.spots.Surf.html  pysurfline.api.models.spots.Swell.html  pysurfline.api.models.spots.Tides.html  pysurfline.api.models.spots.Time.html  pysurfline.api.models.spots.Wave.html  pysurfline.api.models.spots.Weather.html  pysurfline.api.models.spots.Wind.html  pysurfline.api.models.spots.html  pysurfline.api.objects.ApiResponseObject.html  pysurfline.api.objects.SpotDetails.html  pysurfline.api.objects.SpotForecastsSunlightTimes.html  pysurfline.api.objects.SpotForecastsTides.html  pysurfline.api.objects.SpotForecastsWave.html  pysurfline.api.objects.SpotForecastsWeather.html  pysurfline.api.objects.SpotForecastsWind.html  pysurfline.api.objects.html  pysurfline.api.public.get_spot_forecasts.html  pysurfline.api.public.html  pysurfline.api.services.ApiService.html  pysurfline.api.services.html  pysurfline.core.ForecastGetter.html  pysurfline.core.SpotForecast.html  pysurfline.core.SpotForecasts.html  pysurfline.core.SurfReport.html  pysurfline.core.URLBuilder.html  pysurfline.core.html  pysurfline.html  pysurfline.models.Forecast.html  pysurfline.models.SpotForecasts.html  pysurfline.models.SunriseSunsetTime.html  pysurfline.models.Surf.html  (+13 more)
docs/_sources/: index.rst.txt  surfline_api.md.txt
docs/_static/: documentation_options.js
docs/examples/: SpotForecast.html  SpotForecast.ipynb  SpotForecasts.html  SpotForecasts.ipynb  SurfReport.html  SurflineAPI.html  forecasts.html  forecasts.ipynb  (+8 more)
docsrc/: Makefile  requirements.txt
examples/: requests.ipynb
pysurfline/: __init__.py  api.py  client.py  core.py  data.py  models.py  public.py  reports.py  spotforecast.py  utils.py
tests/: api.py  conftest.py  models.py  test_APIResource.py  test_api.py  test_apiresource.py  test_core.py  test_models.py  test_reports.py  test_spotForecast.py  test_utils.py
(+88 files in other folders)
