[tool.poetry]
name = "pysurfline"
version = "0.2.1"
description = "python Surfline API"
authors = ["giocaizzi <giocaizzi@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1"
matplotlib = [
    { version = "^3.8", python = "^3.9" },
    { version = "<3.8", python = "<3.9" },
]
pandas = [
    { version = "^2.1", python = "^3.9" },
    { version = "<2.1", python = "<3.9" },
]
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
pytest-cov = "^5.0.0"
pre-commit = {version = "^3.7.1", python = ">=3.9,<4.0.0"}

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov --cov-report xml --cov-report html --cov-report lcov"

[tool.coverage.report]
include = ["pysurfline/*"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
Homepage = "https://github.com/giocaizzi/pysurfline"
Documentation = "https://giocaizzi.github.io/pysurfline/"
Repository = "https://github.com/giocaizzi/pysurfline"
Issues = "https://github.com/giocaizzi/pysurfline/issues"
